# reversi

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  config.h.in  console_renderer.h  constanst.h  game.cpp  game.h  helper.h  main.cpp  move.cpp  move.h  player.cpp  player.h  playertype.cpp  playertype.h  reversi.txt  score_board.cpp  score_board.h  shape.h  turn_handler.cpp  turn_handler.h
renderers/: CMakeLists.txt  console_renderer.cpp  console_renderer.h
